objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Export Credit Agency (ECA)</fullName>
                </value>
                <value>
                    <fullName>GFTB</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
                <value>
                    <fullName>Other Operating Products</fullName>
                </value>
                <value>
                    <fullName>Transaction Management</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>Barclays - Africa</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>CRAG</fullName>
                </value>
                <value>
                    <fullName>Private Equity and Infra Investments</fullName>
                </value>
                <value>
                    <fullName>RBB</fullName>
                </value>
                <value>
                    <fullName>WIMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code_ID__c</fullName>
        <description>This aligns to MyMI Product List on Major Desk and Needs to start with a B</description>
        <label>Product Code ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_Product_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays Product ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>Line_of_Business__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Code_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>